syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "/pb";

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  string access_token = 1;
  google.protobuf.Timestamp access_token_expires_at = 2;
  string refresh_token = 3;
  google.protobuf.Timestamp refresh_token_expires_at = 4;
  User user = 5;
}
